# MDRestraintsGenerator

./: .gitignore  .lgtm.yml  .travis.yml  BoreschRestraints.py  CHANGELOG  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  appveyor.yml  setup.cfg  setup.py
.github/workflows/: ci.yaml  deploy.yaml
MDRestraintsGenerator/: .Boresch.py.swp  Boresch.py  __init__.py  _version.py  datatypes.py  io.py  restraints.py  search.py  utils.py  writers.py
MDRestraintsGenerator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MDRestraintsGenerator/data/: README.md
MDRestraintsGenerator/data/4RBN/: .npt_prod1_center.skip200.xtc_offsets.npz  BoreschRestraint.top  ClosestRestraintFrame.gro  flatbottom.mdp  flatbottom_ClosestRestraintFrame.gro  flatbottom_debug.mdp  flatbottom_index.ndx  harmonic.mdp  harmonic_debug.mdp  npt_prod1.tpr  npt_prod1_center.skip200.xtc
MDRestraintsGenerator/data/CB8-G3/: BoreschRestraint.top  ClosestRestraintFrame.gro  npt_prod1.tpr  npt_prod_center.skip200.xtc
MDRestraintsGenerator/tests/: datafiles.py  rmsfit_npt_prod1_center.skip200.xtc  test_FindBoreschRestraint.py  test_FindFlatBottomRestraint.py  test_HarmonicRestraint.py  test_MDRestraintsGenerator.py  test_datatypes.py  test_search.py  test_utils.py  test_writers.py
devtools/: README.md
devtools/conda-envs/: build_mda.yml  test_env.yaml
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat
mdrestraintsgenerator/restraints/: Boresch.py
scripts/: BoreschRestraintGMX.py  README.md
