# Helper file to handle all configs
[metdata]
name = MDRestraintsGenerator
description = 
long_description = file: README.md
long_description_type = text/markdown
author = Irfan Alibay
author_email = irfan.alibay@omsf.io
license = LGPLv3
license_file = LICENSE
url = https://github.com/IAlibay/MDRestraintsGenerator/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options]
zip_safe = False
python_requires = >= 3.8
install_requires =
    MDAnalysis>=1.0.0
    numpy
    scipy<1.8
    matplotlib
include_package_data = True
packages = find:

[options.package_data]
MDRestraintsGenerator = "./MDRestraintsGenerator/data/*"

[options.extras_require]
test =
  pytest
  pytest-xdist
  pytest-cov
  MDAnalysisTests


[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    MDRestraintsGenerator/_version.py

[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 79

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = MDRestraintsGenerator/_version.py
versionfile_build = MDRestraintsGenerator/_version.py
tag_prefix = ''

[aliases]
test = pytest
