# Helper file to handle all configs
[metdata]
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options.extras_require]
test =
  pytest
  pytest-xdist
  pytest-cov
  MDAnalysisTests


[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    MDRestraintsGenerator/_version.py

[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 79

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = MDRestraintsGenerator/_version.py
versionfile_build = MDRestraintsGenerator/_version.py
tag_prefix = ''

[aliases]
test = pytest
